[gd_scene load_steps=10 format=3 uid="uid://ciq7tkab1y0bi"]

[ext_resource type="Script" path="res://Script/World.gd" id="1_l2xyw"]
[ext_resource type="PackedScene" uid="uid://dk0g7j25bpblv" path="res://Scenes/Player.tscn" id="2_h4k0r"]
[ext_resource type="PackedScene" uid="uid://b3by8qnmqk65l" path="res://Scenes/Blocks.tscn" id="3_5u53c"]
[ext_resource type="PackedScene" uid="uid://8bluf2mpjkyp" path="res://Scenes/Obstacles.tscn" id="4_7y863"]
[ext_resource type="PackedScene" uid="uid://bcxyvrg8i01r0" path="res://Scenes/CheckPointExit.tscn" id="5_s8rtp"]
[ext_resource type="PackedScene" uid="uid://7m8vypql6hdu" path="res://Scenes/CheckPointStart.tscn" id="6_amhbs"]
[ext_resource type="PackedScene" uid="uid://clxmtid6dohbf" path="res://Scenes/Control.tscn" id="7_ik0gc"]
[ext_resource type="PackedScene" uid="uid://dp4t0yowo5bk7" path="res://Scenes/UI.tscn" id="8_qu7u4"]
[ext_resource type="TileSet" uid="uid://cprgj00wk8lux" path="res://tilemap/Brown.tres" id="9_d6mcy"]

[node name="World" type="Node2D"]
script = ExtResource("1_l2xyw")
current_level = "res://Scenes/level_4.tscn"
Map_Length = 882
Level_Now = 5
next_level = "res://Scenes/level_5.tscn"
metadata/_edit_vertical_guides_ = [0.0, 882.0]
metadata/_edit_horizontal_guides_ = [414.0, 414.0]

[node name="Player" parent="." instance=ExtResource("2_h4k0r")]
z_index = 1
position = Vector2(30, 259)
collision_layer = 3

[node name="Blocks" parent="." instance=ExtResource("3_5u53c")]
layer_0/tile_data = PackedInt32Array(-65135, 327681, 0, 983040, 65537, 1, 1048576, 65537, 6, 1114112, 65537, 6, 1179648, 65537, 6, 1245184, 65537, 6, 1310720, 65537, 6, 1376256, 65537, 6, 1441792, 65537, 7, 983041, 131073, 1, 1048577, 131073, 6, 1114113, 131073, 6, 1179649, 131073, 6, 1245185, 131073, 6, 1310721, 131073, 6, 1376257, 131073, 6, 1441793, 131073, 7, 983042, 131073, 1, 1048578, 131073, 6, 1114114, 131073, 6, 1179650, 131073, 6, 1245186, 131073, 6, 1310722, 131073, 6, 1376258, 131073, 6, 1441794, 131073, 7, 983043, 131073, 1, 1048579, 131073, 6, 1114115, 131073, 6, 1179651, 131073, 6, 1245187, 131073, 6, 1310723, 131073, 6, 1376259, 131073, 6, 1441795, 131073, 7, 983044, 131073, 1, 1048580, 131073, 6, 1114116, 131073, 6, 1179652, 131073, 6, 1245188, 131073, 6, 1310724, 131073, 6, 1376260, 131073, 6, 1441796, 131073, 7, 983045, 131073, 1, 1048581, 131073, 6, 1114117, 131073, 6, 1179653, 131073, 6, 1245189, 131073, 6, 1310725, 131073, 6, 1376261, 131073, 6, 1441797, 131073, 7, 983046, 131073, 1, 1048582, 131073, 6, 1114118, 131073, 6, 1179654, 131073, 6, 1245190, 131073, 6, 1310726, 131073, 6, 1376262, 131073, 6, 1441798, 131073, 7, 983047, 327681, 1, 1048583, 131073, 6, 1114119, 131073, 6, 1179655, 131073, 6, 1245191, 131073, 6, 1310727, 131073, 6, 1376263, 131073, 6, 1441799, 131073, 7, 983048, 131073, 6, 1048584, 131073, 6, 1114120, 131073, 6, 1179656, 131073, 6, 1245192, 131073, 6, 1310728, 131073, 6, 1376264, 131073, 6, 1441800, 131073, 7, 983049, 131073, 6, 1048585, 131073, 6, 1114121, 131073, 6, 1179657, 131073, 6, 1245193, 131073, 6, 1310729, 131073, 6, 1376265, 131073, 6, 1441801, 131073, 7, 983050, 131073, 6, 1048586, 131073, 6, 1114122, 131073, 6, 1179658, 131073, 6, 1245194, 131073, 6, 1310730, 131073, 6, 1376266, 131073, 6, 1441802, 131073, 7, 983051, 131073, 6, 1048587, 131073, 6, 1114123, 131073, 6, 1179659, 131073, 6, 1245195, 131073, 6, 1310731, 131073, 6, 1376267, 131073, 6, 1441803, 131073, 7, 983052, 131073, 6, 1048588, 131073, 6, 1114124, 131073, 6, 1179660, 131073, 6, 1245196, 131073, 6, 1310732, 131073, 6, 1376268, 131073, 6, 1441804, 131073, 7, 983053, 131073, 6, 1048589, 131073, 6, 1114125, 131073, 6, 1179661, 131073, 6, 1245197, 131073, 6, 1310733, 131073, 6, 1376269, 131073, 6, 1441805, 131073, 7, 983054, 131073, 6, 1048590, 131073, 6, 1114126, 131073, 6, 1179662, 131073, 6, 1245198, 131073, 6, 1310734, 131073, 6, 1376270, 131073, 6, 1441806, 131073, 7, 983055, 131073, 6, 1048591, 131073, 6, 1114127, 131073, 6, 1179663, 131073, 6, 1245199, 131073, 6, 1310735, 131073, 6, 1376271, 131073, 6, 1441807, 131073, 7, 983056, 131073, 6, 1048592, 131073, 6, 1114128, 131073, 6, 1179664, 131073, 6, 1245200, 131073, 6, 1310736, 131073, 6, 1376272, 131073, 6, 1441808, 131073, 7, 917521, 196609, 3, 983057, 262145, 1, 1048593, 131073, 6, 1114129, 131073, 6, 1179665, 131073, 6, 1245201, 131073, 6, 1310737, 131073, 6, 1376273, 131073, 6, 1441809, 131073, 7, 983058, 131073, 1, 1048594, 131073, 6, 1114130, 131073, 6, 1179666, 131073, 6, 1245202, 131073, 6, 1310738, 131073, 6, 1376274, 131073, 6, 1441810, 131073, 7, 917523, 262145, 6, 983059, 131073, 1, 1048595, 131073, 6, 1114131, 131073, 6, 1179667, 131073, 6, 1245203, 131073, 6, 1310739, 131073, 6, 1376275, 131073, 6, 1441811, 131073, 7, 983060, 131073, 1, 1048596, 131073, 6, 1114132, 131073, 6, 1179668, 131073, 6, 1245204, 131073, 6, 1310740, 131073, 6, 1376276, 131073, 6, 1441812, 131073, 7, 983061, 131073, 1, 1048597, 131073, 6, 1114133, 131073, 6, 1179669, 131073, 6, 1245205, 131073, 6, 1310741, 131073, 6, 1376277, 131073, 6, 1441813, 131073, 7, 983062, 131073, 1, 1048598, 131073, 6, 1114134, 131073, 6, 1179670, 131073, 6, 1245206, 131073, 6, 1310742, 131073, 6, 1376278, 131073, 6, 1441814, 131073, 7, 983063, 131073, 1, 1048599, 327681, 1, 1114135, 131073, 6, 1179671, 131073, 6, 1245207, 131073, 6, 1310743, 131073, 6, 1376279, 131073, 6, 1441815, 131073, 7, 917528, 327681, 6, 983064, 131073, 1, 1048600, 131073, 6, 1114136, 131073, 6, 1179672, 131073, 6, 1245208, 131073, 6, 1310744, 131073, 6, 1376280, 131073, 6, 1441816, 131073, 7, 917529, 65537, 1, 983065, 327681, 1, 1048601, 131073, 6, 1114137, 131073, 6, 1179673, 131073, 6, 1245209, 131073, 6, 1310745, 131073, 6, 1376281, 131073, 6, 1441817, 131073, 7, 917530, 131073, 1, 983066, 131073, 6, 1048602, 131073, 6, 1114138, 131073, 6, 1179674, 131073, 6, 1245210, 131073, 6, 1310746, 131073, 6, 1376282, 131073, 6, 1441818, 131073, 7, 917531, 131073, 1, 983067, 131073, 6, 1048603, 131073, 6, 1114139, 131073, 6, 1179675, 131073, 6, 1245211, 131073, 6, 1310747, 131073, 6, 1376283, 131073, 6, 1441819, 131073, 7, 983068, 131073, 6, 1048604, 131073, 6, 1114140, 131073, 6, 1179676, 131073, 6, 1245212, 131073, 6, 1310748, 131073, 6, 1376284, 131073, 6, 1441820, 131073, 7, 983069, 131073, 6, 1048605, 131073, 6, 1114141, 131073, 6, 1179677, 131073, 6, 1245213, 131073, 6, 1310749, 131073, 6, 1376285, 131073, 6, 1441821, 131073, 7, 1048606, 131073, 6, 1114142, 131073, 6, 1179678, 131073, 6, 1245214, 131073, 6, 1310750, 131073, 6, 1376286, 131073, 6, 1441822, 131073, 7, 1048607, 131073, 6, 1114143, 131073, 6, 1179679, 131073, 6, 1245215, 131073, 6, 1310751, 131073, 6, 1376287, 131073, 6, 1441823, 131073, 7, 1048608, 131073, 6, 1114144, 131073, 6, 1179680, 131073, 6, 1245216, 131073, 6, 1310752, 131073, 6, 1376288, 131073, 6, 1441824, 131073, 7, 1048609, 131073, 6, 1114145, 131073, 6, 1179681, 131073, 6, 1245217, 131073, 6, 1310753, 131073, 6, 1376289, 131073, 6, 1441825, 131073, 7, 1114146, 131073, 6, 1179682, 131073, 6, 1245218, 131073, 6, 1310754, 131073, 6, 1376290, 131073, 6, 1441826, 131073, 7, 1179683, 131073, 6, 1245219, 131073, 6, 1310755, 131073, 6, 1376291, 131073, 6, 1441827, 131073, 7, 1245220, 131073, 6, 1310756, 131073, 6, 1376292, 131073, 6, 1441828, 131073, 7, 1310757, 131073, 6, 1376293, 131073, 6, 1441829, 131073, 7, 1310758, 131073, 6, 1376294, 131073, 6, 1441830, 131073, 7, 1310759, 131073, 6, 1376295, 131073, 6, 1441831, 131073, 7, 1310760, 131073, 6, 1376296, 131073, 6, 1441832, 131073, 7, 1245225, 131073, 6, 1310761, 131073, 6, 1376297, 131073, 6, 1441833, 131073, 7, 1179690, 131073, 6, 1245226, 131073, 6, 1310762, 131073, 6, 1376298, 131073, 6, 1441834, 131073, 7, 1179691, 131073, 6, 1245227, 131073, 6, 1310763, 131073, 6, 1376299, 131073, 6, 1441835, 131073, 7, 1179692, 131073, 6, 1245228, 131073, 6, 1310764, 131073, 6, 1376300, 131073, 6, 1441836, 131073, 7, 1245229, 131073, 6, 1310765, 131073, 6, 1376301, 131073, 6, 1441837, 131073, 7, 1310766, 131073, 6, 1376302, 131073, 6, 1441838, 131073, 7, 1310767, 131073, 6, 1376303, 131073, 6, 1441839, 131073, 7, 1310768, 196609, 6, 1376304, 196609, 6, 1441840, 196609, 7, 983070, 131073, 6, 983071, 131073, 6, 917511, 65537, 3, 851977, 65537, 3, 851982, 196609, 3, 851996, 65537, 1, 786461, 65537, 1, 720928, 65537, 1, 983072, 131073, 6, 983073, 131073, 6, 983074, 131073, 6, 983075, 262145, 1, 983076, 131073, 1, 983077, 131073, 1, 983078, 131073, 1, 983079, 131073, 1, 983080, 131073, 1, 983081, 131073, 1, 983082, 131073, 1, 983083, 131073, 1, 983084, 131073, 1, 983085, 131073, 1, 983086, 131073, 1, 983087, 131073, 1, 983088, 196609, 1, 1048624, 196609, 6, 1114160, 196609, 6, 1179696, 196609, 6, 1245232, 196609, 6, 1048610, 131073, 6, 1048611, 131073, 6, 1114147, 131073, 6, 1048612, 131073, 6, 1114148, 131073, 6, 1179684, 131073, 6, 1048613, 131073, 6, 1114149, 131073, 6, 1179685, 131073, 6, 1245221, 131073, 6, 1048614, 131073, 6, 1114150, 131073, 6, 1179686, 131073, 6, 1245222, 131073, 6, 1048615, 131073, 6, 1114151, 131073, 6, 1179687, 131073, 6, 1245223, 131073, 6, 1048616, 131073, 6, 1114152, 131073, 6, 1179688, 131073, 6, 1245224, 131073, 6, 1048617, 131073, 6, 1114153, 131073, 6, 1179689, 131073, 6, 1048618, 131073, 6, 1114154, 131073, 6, 1048619, 131073, 6, 1114155, 131073, 6, 1048620, 131073, 6, 1114156, 131073, 6, 1048621, 131073, 6, 1114157, 131073, 6, 1179693, 131073, 6, 1048622, 131073, 6, 1114158, 131073, 6, 1179694, 131073, 6, 1245230, 131073, 6, 1048623, 131073, 6, 1114159, 131073, 6, 1179695, 131073, 6, 1245231, 131073, 6, 720929, 196609, 1, 786466, 196609, 1, 852003, 196609, 1, 917539, 196609, 6, 917513, 327681, 1, 917532, 327681, 1, 851997, 327681, 1, 786464, 327681, 1, 786465, 262145, 1, 852002, 262145, 1, 917512, 131073, 3, 917514, 131073, 6, 917515, 131073, 6, 917516, 131073, 6, 917517, 131073, 6, 917518, 262145, 1, 917519, 131073, 3, 917520, 131073, 3, 851978, 131073, 3, 851979, 131073, 3, 851980, 131073, 3, 851981, 131073, 3, 917533, 131073, 6, 917534, 131073, 6, 917535, 131073, 6, 917536, 131073, 6, 917537, 131073, 6, 851998, 131073, 6, 851999, 131073, 6, 852000, 131073, 6, 852001, 131073, 6, 917538, 131073, 6, 786462, 131073, 1, 786463, 131073, 1, 917509, 262145, 6, 786443, 262145, 6, 917542, 262145, 6, 917544, 327681, 6, 917546, 524289, 6, 655385, 524289, 6, 655377, 524289, 6)

[node name="Obstacles" parent="." instance=ExtResource("4_7y863")]
layer_0/tile_data = PackedInt32Array(655374, 0, 65536, 524323, 0, 65536, 786476, 0, 65536, 720913, 0, 196608, 720921, 0, 196608, 786470, 0, 262144, 1048593, 0, 589824, 1048601, 0, 589824, 1048614, 0, 589824, 720927, 0, 655360, 851995, 0, 655360, 851985, 0, 655360, 851976, 0, 720896, 786460, 0, 720896, 786467, 0, 720896, 917540, 0, 720896, 917528, 0, 131072, 655393, 0, 786432, 851975, 0, 327680, 851983, 0, 327680, 720930, 0, 327680, 720925, 0, 327680, 851993, 0, 327680, 786444, 0, 655360, 786446, 0, 655360)

[node name="Background" type="Node" parent="."]

[node name="Accessories" type="Node" parent="Background"]

[node name="CheckPoint_ Exit" parent="Background/Accessories" instance=ExtResource("5_s8rtp")]
position = Vector2(845, 244)
collision_layer = 32
collision_mask = 2

[node name="CheckPoint_ Start" parent="Background/Accessories" instance=ExtResource("6_amhbs")]
position = Vector2(56, 244)
collision_layer = 16
collision_mask = 2

[node name="CanvasLayer" type="CanvasLayer" parent="Background"]

[node name="Control" parent="Background/CanvasLayer" instance=ExtResource("7_ik0gc")]

[node name="UI" parent="Background/CanvasLayer" instance=ExtResource("8_qu7u4")]
offset_right = -576.0
offset_bottom = -324.0

[node name="ParallaxBackground" type="ParallaxBackground" parent="Background/CanvasLayer"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background/CanvasLayer/ParallaxBackground"]
motion_mirroring = Vector2(576, 0)

[node name="TileMap" type="TileMap" parent="Background/CanvasLayer/ParallaxBackground/ParallaxLayer"]
tile_set = ExtResource("9_d6mcy")
format = 2
layer_0/tile_data = PackedInt32Array(-2, 262145, 0, 65534, 262145, 0, 131070, 262145, 0, 196606, 262145, 0, 262142, 262145, 0, 327678, 262145, 0, 393214, 262145, 0, 458750, 262145, 0, 524286, 262145, 0, 589822, 262145, 0, 655358, 262145, 0, 720894, 262145, 1, 786430, 262145, 2, 851966, 262145, 2, 917502, 262145, 2, 983038, 262145, 2, 1048574, 262145, 2, 1114110, 262145, 2, 1179646, 262145, 2, -1, 262145, 0, 65535, 262145, 0, 131071, 262145, 0, 196607, 262145, 0, 262143, 262145, 0, 327679, 262145, 0, 393215, 262145, 0, 458751, 262145, 0, 524287, 262145, 0, 589823, 262145, 0, 655359, 262145, 0, 720895, 262145, 1, 786431, 262145, 2, 851967, 262145, 2, 917503, 262145, 2, 983039, 262145, 2, 1048575, 262145, 2, 1114111, 262145, 2, 1179647, 262145, 2, -65536, 262145, 0, 0, 262145, 0, 65536, 262145, 0, 131072, 262145, 0, 196608, 262145, 0, 262144, 262145, 0, 327680, 262145, 0, 393216, 262145, 0, 458752, 262145, 0, 524288, 262145, 0, 589824, 262145, 0, 655360, 262145, 1, 720896, 262145, 2, 786432, 262145, 2, 851968, 262145, 2, 917504, 262145, 2, 983040, 262145, 2, 1048576, 262145, 2, 1114112, 262145, 2, -65535, 262145, 0, 1, 262145, 0, 65537, 262145, 0, 131073, 262145, 0, 196609, 262145, 0, 262145, 262145, 0, 327681, 262145, 0, 393217, 262145, 0, 458753, 262145, 0, 524289, 262145, 0, 589825, 262145, 0, 655361, 262145, 1, 720897, 262145, 2, 786433, 262145, 2, 851969, 262145, 2, 917505, 262145, 2, 983041, 262145, 2, 1048577, 262145, 2, 1114113, 262145, 2, -65534, 262145, 0, 2, 262145, 0, 65538, 262145, 0, 131074, 262145, 0, 196610, 262145, 0, 262146, 262145, 0, 327682, 262145, 0, 393218, 262145, 0, 458754, 262145, 0, 524290, 262145, 0, 589826, 262145, 0, 655362, 262145, 1, 720898, 262145, 2, 786434, 262145, 2, 851970, 262145, 2, 917506, 262145, 2, 983042, 262145, 2, 1048578, 262145, 2, 1114114, 262145, 2, -65533, 262145, 0, 3, 262145, 0, 65539, 262145, 0, 131075, 262145, 0, 196611, 262145, 0, 262147, 262145, 0, 327683, 262145, 0, 393219, 262145, 0, 458755, 262145, 0, 524291, 262145, 0, 589827, 262145, 0, 655363, 262145, 1, 720899, 262145, 2, 786435, 262145, 2, 851971, 262145, 2, 917507, 262145, 2, 983043, 262145, 2, 1048579, 262145, 2, 1114115, 262145, 2, -65532, 262145, 0, 4, 262145, 0, 65540, 262145, 0, 131076, 262145, 0, 196612, 262145, 0, 262148, 262145, 0, 327684, 262145, 0, 393220, 262145, 0, 458756, 262145, 0, 524292, 262145, 0, 589828, 262145, 0, 655364, 262145, 1, 720900, 262145, 2, 786436, 262145, 2, 851972, 262145, 2, 917508, 262145, 2, 983044, 262145, 2, 1048580, 262145, 2, 1114116, 262145, 2, -65531, 262145, 0, 5, 262145, 0, 65541, 262145, 0, 131077, 262145, 0, 196613, 262145, 0, 262149, 262145, 0, 327685, 262145, 0, 393221, 262145, 0, 458757, 262145, 0, 524293, 262145, 0, 589829, 262145, 0, 655365, 262145, 1, 720901, 262145, 2, 786437, 262145, 2, 851973, 262145, 2, 917509, 262145, 2, 983045, 262145, 2, 1048581, 262145, 2, 1114117, 262145, 2, -65530, 262145, 0, 6, 262145, 0, 65542, 262145, 0, 131078, 262145, 0, 196614, 262145, 0, 262150, 262145, 0, 327686, 262145, 0, 393222, 262145, 0, 458758, 262145, 0, 524294, 262145, 0, 589830, 262145, 0, 655366, 262145, 1, 720902, 262145, 2, 786438, 262145, 2, 851974, 262145, 2, 917510, 262145, 2, 983046, 262145, 2, 1048582, 262145, 2, 1114118, 262145, 2, -65529, 262145, 0, 7, 262145, 0, 65543, 262145, 0, 131079, 262145, 0, 196615, 262145, 0, 262151, 262145, 0, 327687, 262145, 0, 393223, 262145, 0, 458759, 262145, 0, 524295, 262145, 0, 589831, 262145, 0, 655367, 262145, 1, 720903, 262145, 2, 786439, 262145, 2, 851975, 262145, 2, 917511, 262145, 2, 983047, 262145, 2, 1048583, 262145, 2, 1114119, 262145, 2, -65528, 262145, 0, 8, 262145, 0, 65544, 262145, 0, 131080, 262145, 0, 196616, 262145, 0, 262152, 262145, 0, 327688, 262145, 0, 393224, 262145, 0, 458760, 262145, 0, 524296, 262145, 0, 589832, 262145, 0, 655368, 262145, 1, 720904, 262145, 2, 786440, 262145, 2, 851976, 262145, 2, 917512, 262145, 2, 983048, 262145, 2, 1048584, 262145, 2, 1114120, 262145, 2, -65527, 262145, 0, 9, 262145, 0, 65545, 262145, 0, 131081, 262145, 0, 196617, 262145, 0, 262153, 262145, 0, 327689, 262145, 0, 393225, 262145, 0, 458761, 262145, 0, 524297, 262145, 0, 589833, 262145, 0, 655369, 262145, 1, 720905, 262145, 2, 786441, 262145, 2, 851977, 262145, 2, 917513, 262145, 2, 983049, 262145, 2, 1048585, 262145, 2, 1114121, 262145, 2, -65526, 262145, 0, 10, 262145, 0, 65546, 262145, 0, 131082, 262145, 0, 196618, 262145, 0, 262154, 262145, 0, 327690, 262145, 0, 393226, 262145, 0, 458762, 262145, 0, 524298, 262145, 0, 589834, 262145, 0, 655370, 262145, 1, 720906, 262145, 2, 786442, 262145, 2, 851978, 262145, 2, 917514, 262145, 2, 983050, 262145, 2, 1048586, 262145, 2, 1114122, 262145, 2, -65525, 262145, 0, 11, 262145, 0, 65547, 262145, 0, 131083, 262145, 0, 196619, 262145, 0, 262155, 262145, 0, 327691, 262145, 0, 393227, 262145, 0, 458763, 262145, 0, 524299, 262145, 0, 589835, 262145, 0, 655371, 262145, 1, 720907, 262145, 2, 786443, 262145, 2, 851979, 262145, 2, 917515, 262145, 2, 983051, 262145, 2, 1048587, 262145, 2, 1114123, 262145, 2, -65524, 262145, 0, 12, 262145, 0, 65548, 262145, 0, 131084, 262145, 0, 196620, 262145, 0, 262156, 262145, 0, 327692, 262145, 0, 393228, 262145, 0, 458764, 262145, 0, 524300, 262145, 0, 589836, 262145, 0, 655372, 262145, 1, 720908, 262145, 2, 786444, 262145, 2, 851980, 262145, 2, 917516, 262145, 2, 983052, 262145, 2, 1048588, 262145, 2, 1114124, 262145, 2, -65523, 262145, 0, 13, 262145, 0, 65549, 262145, 0, 131085, 262145, 0, 196621, 262145, 0, 262157, 262145, 0, 327693, 262145, 0, 393229, 262145, 0, 458765, 262145, 0, 524301, 262145, 0, 589837, 262145, 0, 655373, 262145, 1, 720909, 262145, 2, 786445, 262145, 2, 851981, 262145, 2, 917517, 262145, 2, 983053, 262145, 2, 1048589, 262145, 2, 1114125, 262145, 2, -65522, 262145, 0, 14, 262145, 0, 65550, 262145, 0, 131086, 262145, 0, 196622, 262145, 0, 262158, 262145, 0, 327694, 262145, 0, 393230, 262145, 0, 458766, 262145, 0, 524302, 262145, 0, 589838, 262145, 0, 655374, 262145, 1, 720910, 262145, 2, 786446, 262145, 2, 851982, 262145, 2, 917518, 262145, 2, 983054, 262145, 2, 1048590, 262145, 2, 1114126, 262145, 2, -65521, 262145, 0, 15, 262145, 0, 65551, 262145, 0, 131087, 262145, 0, 196623, 262145, 0, 262159, 262145, 0, 327695, 262145, 0, 393231, 262145, 0, 458767, 262145, 0, 524303, 262145, 0, 589839, 262145, 0, 655375, 262145, 1, 720911, 262145, 2, 786447, 262145, 2, 851983, 262145, 2, 917519, 262145, 2, 983055, 262145, 2, 1048591, 262145, 2, 1114127, 262145, 2, -65520, 262145, 0, 16, 262145, 0, 65552, 262145, 0, 131088, 262145, 0, 196624, 262145, 0, 262160, 262145, 0, 327696, 262145, 0, 393232, 262145, 0, 458768, 262145, 0, 524304, 262145, 0, 589840, 262145, 0, 655376, 262145, 1, 720912, 262145, 2, 786448, 262145, 2, 851984, 262145, 2, 917520, 262145, 2, 983056, 262145, 2, 1048592, 262145, 2, 1114128, 262145, 2, -65519, 262145, 0, 17, 262145, 0, 65553, 262145, 0, 131089, 262145, 0, 196625, 262145, 0, 262161, 262145, 0, 327697, 262145, 0, 393233, 262145, 0, 458769, 262145, 0, 524305, 262145, 0, 589841, 262145, 0, 655377, 262145, 1, 720913, 262145, 2, 786449, 262145, 2, 851985, 262145, 2, 917521, 262145, 2, 983057, 262145, 2, 1048593, 262145, 2, 1114129, 262145, 2, -65518, 262145, 0, 18, 262145, 0, 65554, 262145, 0, 131090, 262145, 0, 196626, 262145, 0, 262162, 262145, 0, 327698, 262145, 0, 393234, 262145, 0, 458770, 262145, 0, 524306, 262145, 0, 589842, 262145, 0, 655378, 262145, 1, 720914, 262145, 2, 786450, 262145, 2, 851986, 262145, 2, 917522, 262145, 2, 983058, 262145, 2, 1048594, 262145, 2, 1114130, 262145, 2, -65517, 262145, 0, 19, 262145, 0, 65555, 262145, 0, 131091, 262145, 0, 196627, 262145, 0, 262163, 262145, 0, 327699, 262145, 0, 393235, 262145, 0, 458771, 262145, 0, 524307, 262145, 0, 589843, 262145, 0, 655379, 262145, 1, 720915, 262145, 2, 786451, 262145, 2, 851987, 262145, 2, 917523, 262145, 2, 983059, 262145, 2, 1048595, 262145, 2, 1114131, 262145, 2, -65516, 262145, 0, 20, 262145, 0, 65556, 262145, 0, 131092, 262145, 0, 196628, 262145, 0, 262164, 262145, 0, 327700, 262145, 0, 393236, 262145, 0, 458772, 262145, 0, 524308, 262145, 0, 589844, 262145, 0, 655380, 262145, 1, 720916, 262145, 2, 786452, 262145, 2, 851988, 262145, 2, 917524, 262145, 2, 983060, 262145, 2, 1048596, 262145, 2, 1114132, 262145, 2, -65515, 262145, 0, 21, 262145, 0, 65557, 262145, 0, 131093, 262145, 0, 196629, 262145, 0, 262165, 262145, 0, 327701, 262145, 0, 393237, 262145, 0, 458773, 262145, 0, 524309, 262145, 0, 589845, 262145, 0, 655381, 262145, 1, 720917, 262145, 2, 786453, 262145, 2, 851989, 262145, 2, 917525, 262145, 2, 983061, 262145, 2, 1048597, 262145, 2, 1114133, 262145, 2, -65514, 262145, 0, 22, 262145, 0, 65558, 262145, 0, 131094, 262145, 0, 196630, 262145, 0, 262166, 262145, 0, 327702, 262145, 0, 393238, 262145, 0, 458774, 262145, 0, 524310, 262145, 0, 589846, 262145, 0, 655382, 262145, 1, 720918, 262145, 2, 786454, 262145, 2, 851990, 262145, 2, 917526, 262145, 2, 983062, 262145, 2, 1048598, 262145, 2, 1114134, 262145, 2, -65513, 262145, 0, 23, 262145, 0, 65559, 262145, 0, 131095, 262145, 0, 196631, 262145, 0, 262167, 262145, 0, 327703, 262145, 0, 393239, 262145, 0, 458775, 262145, 0, 524311, 262145, 0, 589847, 262145, 0, 655383, 262145, 1, 720919, 262145, 2, 786455, 262145, 2, 851991, 262145, 2, 917527, 262145, 2, 983063, 262145, 2, 1048599, 262145, 2, 1114135, 262145, 2, 786456, 262145, 2, 851992, 262145, 2, 917528, 262145, 2, 983064, 262145, 2, 1048600, 262145, 2, 1114136, 262145, 2, 786457, 262145, 2, 851993, 262145, 2, 917529, 262145, 2, 983065, 262145, 2, 1048601, 262145, 2, 1114137, 262145, 2, 786458, 262145, 2, 851994, 262145, 2, 917530, 262145, 2, 983066, 262145, 2, 1048602, 262145, 2, 1114138, 262145, 2, 720920, 262145, 2, 720921, 262145, 2, 720922, 262145, 2, 720923, 262145, 2, 786459, 262145, 2, 851995, 262145, 2, 917531, 262145, 2, 983067, 262145, 2, 1048603, 262145, 2, 1114139, 262145, 2, 655384, 262145, 1, 655385, 262145, 1, 655386, 262145, 1, 655387, 262145, 1, -65512, 262145, 0, 24, 262145, 0, 65560, 262145, 0, 131096, 262145, 0, 196632, 262145, 0, 262168, 262145, 0, 327704, 262145, 0, 393240, 262145, 0, 458776, 262145, 0, 524312, 262145, 0, 589848, 262145, 0, -65511, 262145, 0, 25, 262145, 0, 65561, 262145, 0, 131097, 262145, 0, 196633, 262145, 0, 262169, 262145, 0, 327705, 262145, 0, 393241, 262145, 0, 458777, 262145, 0, 524313, 262145, 0, 589849, 262145, 0, -65510, 262145, 0, 26, 262145, 0, 65562, 262145, 0, 131098, 262145, 0, 196634, 262145, 0, 262170, 262145, 0, 327706, 262145, 0, 393242, 262145, 0, 458778, 262145, 0, 524314, 262145, 0, 589850, 262145, 0, -65509, 262145, 0, 65563, 262145, 0, 131099, 262145, 0, 196635, 262145, 0, 262171, 262145, 0, 327707, 262145, 0, 393243, 262145, 0, 458779, 262145, 0, 524315, 262145, 0, 589851, 262145, 0, 27, 262145, 0)

[connection signal="playercoin" from="Player" to="." method="_on_player_playercoin"]
[connection signal="playerdiamond" from="Player" to="." method="_on_player_playerdiamond"]
[connection signal="playerdie" from="Player" to="." method="_on_player_playerdie"]
[connection signal="body_entered" from="Background/Accessories/CheckPoint_ Exit" to="." method="_on_check_point__exit_body_entered"]
[connection signal="ZeroLove" from="Background/CanvasLayer/UI" to="." method="_on_ui_zero_love"]
